--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "file-system": "^2.2.2",
     "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
